--- a/src/components/question/question.scss
+++ b/src/components/question/question.scss
@@ -53,6 +53,7 @@
     pointer-events: none;
 
     [data-show-question='true'] & {
+      z-index: 999;
       pointer-events: initial;
       opacity: 1;
       transform: translate(50%, 40%) scale(1);
@@ -96,9 +97,10 @@
     pointer-events: none;
 
     [data-show-question='true'] & {
+      z-index: 999;
       pointer-events: initial;
       opacity: 1;
-      transform: translate(-3rem, 4rem) scale(1);
+      transform: translate(-4rem, 4rem) scale(1);
 
       transition: 0.2s 2.2s $ease-overshoot transform,
         0.2s 2.2s $ease-out opacity;
